...
  @ViewBuilder
  private func scheduleHeader() -> some View {
    VStack(alignment: .center) {
      Spacer()
        .frame(height: 32)

      Text("일정 선택")
        .dddFont(.title2NormalBold)
        .foregroundStyle(.borderInverse)
    }
  }

  @ViewBuilder
...
  @ViewBuilder
  private func confirmButton() -> some View {
    CustomButton(
      action: {
        send(.confirmSelection)
      },
      title: "확인",
      config: CustomButtonConfig.create()
    )
    .isEnable(store.isConfirmEnabled)
    .dddAccessibilityID(ManagementAccessibilityID.ScheduleModal.confirmButton)
  }
}
...
